--- a/site/index.html
+++ b/site/index.html
@@ -76,9 +76,14 @@
             <div class="button" id="right">-&gt</div>
         </div>
         <div class="buttons">
+            <textarea id="textInput">default 
+text</textarea>
+            <div class="button" id="textButton">Text</div>
+        </div>
+        <div class="buttons">
           <div class="button" id="clear">Clear</div>
         </div>
-        <script>
+        <script> 
             var minus = document.querySelector('.minus'),
                 plus = document.querySelector('.plus'),
                 value = document.querySelector('.value'),
@@ -92,6 +97,8 @@
                 right = document.querySelector('#right'),
                 up = document.querySelector('#up'),
                 down = document.querySelector('#down'),
+                textInput = document.querySelector('#textInput'),
+                textButton = document.querySelector('#textButton'),
                 clear = document.querySelector('#clear'),
 
                 colorPicker = document.querySelector('#colorPicker'),
@@ -134,6 +141,9 @@
             }
             left.onclick = function(event) {
                 websocket.send(JSON.stringify({move: "left"}))
+            }
+            textButton.onclick = function(event) {
+                websocket.send(JSON.stringify({action: "text", text: textInput.value}))
             }
             clear.onclick = function(event) {
                 websocket.send(JSON.stringify({action: "clear"}))
