fixed right and left switch

--- a/site/index.html
+++ b/site/index.html
@@ -147,8 +147,8 @@ text</textarea>
 
             up.onclick = upFunc
             down.onclick = downFunc
-            right.onclick = leftFunc
-            left.onclick = rightFunc
+            right.onclick = rightFunc
+            left.onclick = leftFunc
 
             window.addEventListener('keydown', (e) => {
                 switch (event.key) {
